# fluss-rust

./: .asf.yaml  .gitignore  .licenserc.yaml  404.html  Cargo.toml  DEVELOPMENT.md  MODULE.bazel  README.md  deny.toml  index.html  justfile  sw.js
.cargo/: config.toml
.github/actions/docker-cache/: action.yml
.github/workflows/: audit.yml  build_and_test_cpp.yml  build_and_test_elixir.yml  build_and_test_python.yml  build_and_test_rust.yml  check_documentation.yml  check_license_and_formatting.yml  ci.yml  ci_bindings_cpp.yml  ci_bindings_python.yml  ci_check.yml  ci_cpp.yml  ci_python.yml  ci_rust.yml  deploy_documentation.yml  release_python.yml  release_rust.yml
assets/js/: 19b9b563.42ef982a.js  2606e8f0.1164a36d.js  2606e8f0.3df9ad11.js  445dfbc8.8514a937.js  445dfbc8.9d98fff1.js  4929aa57.a731089f.js  535c914a.f44b9726.js  563a3698.9c32eb30.js  5be6a790.6df46eac.js  5be6a790.870de266.js  5cbabd65.612f64df.js  632d88cf.acd3903a.js  687602b6.aee9bc4d.js  692614d6.ceee42b6.js  7458a8dd.49ad9e84.js  745ce156.3acafd71.js  76210954.a58f3b8a.js  8fca9180.a6e1aa34.js  a09c8d71.bf754a70.js  a09c8d71.f562ccd8.js  aaf64d1a.3f285a53.js  d6584c60.19a5d064.js  dfb4c545.92bb5b30.js  runtime~main.22fb716d.js  runtime~main.613ff8f6.js  runtime~main.d8688ab9.js  runtime~main.ed9fbf36.js
bazel/cpp/: BUILD.bazel  deps.bzl
bindings/cpp/: .bazelrc  .gitignore  BUILD.bazel  CMakeLists.txt  Cargo.toml  MODULE.bazel  ci.sh
bindings/cpp/bazel/cpp/: BUILD.bazel  deps.bzl
bindings/cpp/examples/: basic_example.cpp  example.cpp  kv_example.cpp
bindings/cpp/include/: fluss.hpp
bindings/cpp/scripts/: ensure_protoc.sh
bindings/cpp/src/: admin.cpp  connection.cpp  ffi_converter.hpp  lib.rs  table.cpp  types.rs
bindings/cpp/test/: test_ffi_converter.cpp  test_kv_table.cpp  test_log_table.cpp  test_sasl_auth.cpp  test_utils.h
bindings/cpp/tests/: basic_test.cpp
bindings/elixir/lib/: fluss.ex
bindings/elixir/lib/fluss/: admin.ex  append_writer.ex  config.ex  connection.ex  log_scanner.ex  native.ex  schema.ex  table.ex  table_descriptor.ex  table_info.ex  write_handle.ex
bindings/elixir/native/fluss_nif/: Cargo.toml
bindings/elixir/test/: fluss_test.exs
bindings/elixir/test/integration/: admin_test.exs  log_table_test.exs
bindings/python/: API_REFERENCE.md  Cargo.toml  DEVELOPMENT.md  README.md  pyproject.toml  python-api-reference.md
bindings/python/example/: example.py  lance_on_minio.py  log_table.py  partitioned_table.py
bindings/python/fluss/: __init__.pyi
bindings/python/python/fluss_python/: __init__.pyi
bindings/python/src/: admin.rs  config.rs  connection.rs  error.rs  lib.rs  lookup.rs  metadata.rs  table.rs  test_cluster.rs  upsert.rs  utils.rs
bindings/python/test/: conftest.py  test_admin.py  test_context_manager.py  test_kv_table.py  test_log_table.py  test_sasl_auth.py  test_schema.py
crates/examples/: Cargo.toml
crates/examples/src/: example_kv_table.rs  example_partitioned_kv_table.rs  example_projection.rs  example_prometheus_metrics.rs  example_table.rs  projection_example.rs  projection_example_no_compression.rs
crates/fluss/: Cargo.toml  README.md
crates/fluss-test-cluster/: Cargo.toml
crates/fluss-test-cluster/src/: lib.rs  main.rs
crates/fluss/src/: config.rs  error.rs  lib.rs  metrics.rs  test_utils.rs
crates/fluss/src/bucketing/: mod.rs
crates/fluss/src/client/: admin.rs  connection.rs  credentials.rs  metadata.rs  mod.rs  schema_getter.rs
crates/fluss/src/cluster/: cluster.rs  mod.rs
crates/fluss/tests/: test_fluss.rs
crates/staging-readme-preview/: Cargo.toml  README.md  README.tool.md
crates/staging-readme-preview/src/: lib.rs
developer-guide/contributing/: index.html
docs/: cpp-bazel-usage.md  creating-a-release.md  generate-release-note.md  python-api-reference.md  python-client.md  rust-client.md  verifying-a-release-candidate.md
release/create-release/: index.html
release/generate-release-note/: index.html
release/verifying-a-release-candidate/: index.html
scripts/: constants.py  dependencies.py  release.sh
thoughts/shared/: pr_description.md
thoughts/shared/plans/: 2026-03-15-row-nested-struct-support.md
thoughts/shared/research/: 2026-03-15-row-nested-struct-support.md
user-guide/cpp/api-reference/: index.html
user-guide/cpp/data-types/: index.html
user-guide/cpp/error-handling/: index.html
user-guide/cpp/example/: index.html
user-guide/cpp/installation/: index.html
user-guide/python/api-reference/: index.html
user-guide/python/data-types/: index.html
user-guide/python/error-handling/: index.html
user-guide/python/example/: index.html
user-guide/python/installation/: index.html
user-guide/rust/api-reference/: index.html
user-guide/rust/data-types/: index.html
user-guide/rust/error-handling/: index.html
user-guide/rust/example/: index.html
user-guide/rust/installation/: index.html
website/: docusaurus.config.ts  sidebars.ts
website/docs/: index.md  release.md
website/docs/developer-guide/: contributing.md  release.md
(+194 files in other folders)
